--- a/roles/java/template/source.sh.j2
+++ b/roles/java/template/source.sh.j2
@@ -19,9 +19,13 @@ if [[ -f "{{ java_rv_jdk_gradle_install_path }}/bin/gradle" ]] && [[ ! "$PATH" =
     export PATH
 fi
 
-if [[ -f "$HOME/.local/share/groovy/bin/groovy" ]] && [[ ! "$PATH" =~ $HOME/.local/share/groovy/bin: ]]; then
-    PATH="$HOME/.local/share/groovy/bin:$PATH"
-    export GROOVY_HOME="$HOME/.local/share/groovy"
+if [[ -f "{{ java_rv_jdk_groovy_install_path }}/bin/groovy" ]] && [[ ! "$PATH" =~ {{ java_rv_jdk_groovy_install_path }}/bin: ]]; then
+    PATH="{{ java_rv_jdk_groovy_install_path }}/bin:$PATH"
+    export GROOVY_HOME="{{ java_rv_jdk_groovy_install_path }}"
     export PATH
 fi
 
+if [[ -f "{{ java_rv_jdk_kotlinc_install_path }}/bin/kotlinc" ]] && [[ ! "$PATH" =~ {{ java_rv_jdk_kotlinc_install_path }}/bin: ]]; then
+    PATH="{{ java_rv_jdk_kotlinc_install_path }}/bin:$PATH"
+    export PATH
+fi
